--- a/public/angular_app/app.css
+++ b/public/angular_app/app.css
@@ -32,3 +32,30 @@
 .angular-google-map-container { 
   height: 400px; 
 }
+#styles
+body, html {
+  height: 100%;
+  width: 100%;
+}
+.angular-google-map-container {
+  height: 100%;
+  width: 75%;
+  position: absolute;
+}
+
+.middle {
+  display: table;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*
+Use bootstraps container w/ some overrides, nice thing about this on bootstrap is there is
+psuedo element with clearfix and display: table; , all after (which is why I know .middle works above)
+*/
+.container{
+  width: 75%;
+  padding-left: 0;
+  padding-right: 0;
+}
